# test_clang

./: CMakeLists.txt  PreLoad.cmake  README.md
app/: CMakeLists.txt  main.cpp
